syntax = "proto3";

option go_package = ".;fotune_srv_user";
import "google/protobuf/empty.proto";
import public "google/protobuf/timestamp.proto";

service User {
    rpc Login (LoginReq) returns (LoginResp) {
    }
    rpc SendValidateCode (ValidateCodeReq) returns (ValidateCodeResp) {
    }
    rpc Register (RegisterReq) returns (google.protobuf.Empty) {
    }
    rpc ResetPassword (ChangePasswordReq) returns (google.protobuf.Empty) {
    }
    rpc ForgetPassword (ForgetPasswordReq) returns (google.protobuf.Empty) {
    }
    rpc UpdateUser (UpdateUserReq) returns (google.protobuf.Empty) {
    }
    rpc GetUserInfo (userInfoReq) returns (LoginResp) {
    }
    rpc GetMembers (google.protobuf.Empty) returns (GetMembersResp) {
    }
    rpc GetPaymentMethod (google.protobuf.Empty) returns (GetPaymentMethodResp) {
    }
    rpc GetAllUserInfo(google.protobuf.Empty) returns (AllUserInfoResp) {
    }
    rpc GetUserMasterByInViteUser(GetUserMasterReq) returns (UserMasterResp) {
    }
}

message GetUserMasterReq {
    string InviteUid =1;
}

message UserMasterResp {
    string UserMasterId =1;
}

message AllUserInfoResp {
    repeated LoginResp UserInfo = 1;
}

message userInfoReq {
    string userID = 1;
}

message LoginReq {
    string phone = 1;
    string password = 2;
}

message LoginResp {
    string userID = 1;
    string invitationCode = 2;
    string name = 3;
    string avatar = 4;
    string phone = 5;
    google.protobuf.Timestamp lastLogin = 6;
    int32 loginCount = 7;
}

message ValidateCodeReq {
    string phone = 1;
}

message ValidateCodeResp {
    string code = 1;
}

message RegisterReq {
    string name = 1;
    string phone = 2;
    string password = 3;
    string confirmPassword = 4;
    string invitationCode = 5;
    string validateCode = 6;
}

message ChangePasswordReq {
    string userID = 1;
    string password = 2;
    string confirmPassword = 3;
}

message ForgetPasswordReq {
    string password = 1;
    string confirmPassword = 2;
    string phone = 3;
    string validateCode = 4;
}


message UpdateUserReq {
    string name = 1;
    string avatar = 2;
    string userId = 3;
}

message Member {
    int32 id = 1;
    string name = 2;
    string remark = 3;
    int32 price = 4;
    int32 old_price = 5;
    int32 duration = 6;
    int32 state = 7;
    string created_at = 8;
    string updated_at = 9;
}

message GetMembersResp {
    repeated Member members = 1;
}

message Payment {
    int32 id = 1;
    string name = 2;
    string remark = 3;
    string BitAddr = 4;
    string BitCode = 5;
    int32 state = 6;
}

message GetPaymentMethodResp {
    repeated Payment payments =1;
}